--- a/week2/index.html
+++ b/week2/index.html
@@ -1,31 +1,29 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Responsive | Yakov</title>
-	<style type="text/css">
-		h1 {
-			font-family: Arial;
-		}
-		p {
-			width: 80%;
-			height: 100px;
-			background-color: #4f0f55;
-			border: 2px dashed yellow;
-			color: white;
-			font-family: courier;
-		}
-
-		@media(max-width: 750px) and (min-width: 551px) {  p {background-color: red }}
-		@media(max-width: 550px)  { p{background-color: green} }
-
+	<title>Week 2* | Evan Genest Homework Folder</title>
+	<link rel="stylesheet"  href="styles/chineseFood.css" type="text/css" />
+		
 	</style>
 </head>
 
 <body>
-<h1>Responsive Layout</h1>
+<h1>oooooooooooooooooooooooooooooo</h1>
 
-<div class="row">
-  <div class="col-lg-3 col-md-6"><p>Item 1</p></div>
-  </div>
+ <section class=" col-large-4 col-tablet-6  col-mobile-12">
+ <p>Lisa</p>
+ </section>
+ 
+ <section class="col-large-4 col-tablet-6  col-mobile-12">
+ <p>Amy</p>
+ </section>
+ 
+ <section class="col-large-4 col-tablet-12  col-mobile-12"> 
+ <p>Evan</p>
+ </section>
+
+
 </body>
 </html>
+
+
