fix colors and borders

--- a/week2/index.html
+++ b/week2/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Week 2* | Evan Genest Homework Folder</title>
+	<title>Week 2 | Evan Genest Homework Folder</title>
 	<link rel="stylesheet"  href="styles/chineseFood.css" type="text/css" />
 		
 	</style>
@@ -11,17 +11,17 @@
 <h1>Welcome to Cafe-Geo</h1>
 
  <section class=" col-large-4 col-tablet-6  col-mobile-12">
- <h2>Igneous<br> Foods</h2>
+ <div class="category"><h2>Igneous<br> Foods</h2></div>
  <p><strong>Creme Brulee</strong> is usually served in individual ramekins. Discs of caramel may be prepared separately and put on top just before serving, or the caramel may be formed directly on top of the custard, immediately before serving. To do this, sugar is sprinkled onto the custard, then caramelized under a salamander broiler or with a butane torch. (Wikipedia)</p>
  </section>
  
  <section class="col-large-4 col-tablet-6  col-mobile-12">
- <h2>Metamorphic<br> Foods</h2>
- <p><strong>Century egg</strong> or pidan is  made by preserving duck, chicken or quail eggs in a mixture of clay, ash, salt, quicklime, and rice hulls for several weeks to several months, depending on the method of processing. Through the process, the yolk becomes a dark green to grey color, with a creamy consistency and strong flavor due to the hydrogen sulfide and ammonia present, while the white becomes a dark brown, translucent jelly with a salty flavor. The transforming agent in the century egg is an alkaline salt, which gradually raises the pH of the egg to around 9–12, during the curing process. (Wikipedia)</p>
+ <div class="category"><h2>Metamorphic<br> Foods</h2></div>
+ <p><strong>Century egg</strong> or pidan is  made by preserving duck, chicken or quail eggs in a mixture of clay, ash, salt, quicklime, and rice hulls for several weeks to several months, depending on the method of processing. Through the process, the yolk becomes a dark green to grey color, with a creamy consistency and strong flavor due to the hydrogen sulfide and ammonia present, while the white becomes a dark brown, translucent jelly with a salty flavor. The transforming agent in the century egg is an alkaline salt, which gradually raises the pH of the egg to around 9-12, during the curing process. (Wikipedia)</p>
  </section>
  
  <section class="col-large-4 col-tablet-12  col-mobile-12"> 
- <h2>Sedimentary<br> Foods</h2>
+ <div class="category"><h2>Sedimentary<br> Foods</h2></div>
  <p><strong>Tofu</strong> also known as bean curd, is a food made by coagulating soy milk and then pressing the resulting curds into soft white blocks. It is a component in East Asian and Southeast Asian cuisines. Tofu can be soft, firm, or extra firm. Tofu has a subtle flavor and can be used in savory and sweet dishes. It is often seasoned or marinated to suit the dish. (Wikipedia)</p>
  </section>
 
