--- a/week2/index.html
+++ b/week2/index.html
@@ -3,7 +3,9 @@
 <head>
 	<title>Week 2 | Evan Genest Homework Folder</title>
 	<link rel="stylesheet"  href="styles/chineseFood.css" type="text/css" />
-		
+	<meta charset="utf-8">
+	<meta name="author" content="Evan Genest, Madison Wisconsin atom_box@hotmail.com mistergenest@twitter.com">
+	<meta name="description" content="An imaginary menu with types of food based on the three categories for geologic processes.  Written for Coursera, Johns Hopkins, web development" >	
 	</style>
 </head>
 
