Add July 5 reflection with CLICKABLE demo

--- a/week2/index.html
+++ b/week2/index.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet"  href="styles/chineseFood.css" type="text/css" />
 	<meta charset="utf-8">
 	<meta name="author" content="Evan Genest, Madison Wisconsin atom_box@hotmail.com mistergenest@twitter.com">
-	<meta name="description" content="An imaginary menu with types of food based on the three categories for geologic processes.  Written for Coursera, Johns Hopkins, web development" >	
+	<meta name="description" content="An imaginary menu with types of food based on the three categories for geologic processes.  Written for Coursera, Johns Hopkins, 'HTML, CSS, and Javascript for Web Developers' " >	
 	</style>
 </head>
 
