--- a/week3/module3_solution/index.html
+++ b/week3/module3_solution/index.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Bootstrap 101 Template</title>
+    <title>Module 3 | Evan Genest Homework</title>
     <meta name="author" content="Evan Genest genest.1@osu.edu mistergenest@twitter">
     <meta name="description" content="An exercise for the Coursera class HTML, CSS, and JavaScript by Yaakov at Johns Hopkins University">
 
     <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="styles/sunset.css" type="text/css" rel="stylesheet"
+    <link href="css/bootstrap.min.css" type="text/css" rel="stylesheet">
+    <link href="css/oolong.css" type="text/css" rel="stylesheet" >
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -20,20 +20,28 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
   </head>
+  <!--++++++++++++++++++++++++-->
   <body>
-    <h1>Hello, world!</h1>
-    <div>Nothing special here.</div>
-    <p>Or here.</p>
-    <h1>Genest Summer Goals 2017</h1>
-      <h2>A trio of skills:</h2>
-        <h3>CSS / Django </h3>
-          <ol>
-            
-            <li>Official Django project <a href="https://docs.djangoproject.com/en/1.11/intro/">tutorial</a>.</li>
-            <>
-            <li>Probably don't need a virtual terminal like <a href="https://www.vagrantup.com/intro/index.html">Vagrant</a>./li>
-            <li>Which people sometimes install alongside <a href="https://www.virtualbox.org/">Virtual Box</a></li>
-          </ol>
+    <header>
+    <nav id="header-nav" class="navbar navbar-default">
+    <div class="container">
+      <h1>Food, LLC</h1>
+      <ul>
+        <li>Chicken</li>
+        <li>Beef</li>
+        <li>Sushi</li>
+      </ul>
+    </div>
+    </nav>
+    </header>
+<div>
+  <div><h2>Chicken</h2><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,   quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo id est laborum.</p></div>
+
+  <div><h2>Beef</h2><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,   quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo id est laborum.</p></div>
+
+  <div><h2>Sushi</h2><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,   quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo id est laborum.</p></div>
+
+</div>
 
 
 <!--++++++++++++++++++++++++-->
