First over-rides of Bootstrap defaults

--- a/week0_diary/index.html
+++ b/week0_diary/index.html
@@ -52,5 +52,6 @@
 	<section><p><em>To Do:</em>1) Allign the code. 2) Organize properly, via HEADER, ARTICLE, FOOTER. </p>
 	<p><em>Syntax in quiver to use:</em>1) text-transform, text allign font weight font-style:italic the code. 2) For next Reflection make all the fonts as font-size: 2em, 3em, 0.5em, etc </p>
 	</section>
+	<footer>&copy1983.  graphitefurnace.io</footer>
 	</body>
 </html>
