--- a/week0_diary/reflection705.html
+++ b/week0_diary/reflection705.html
@@ -4,7 +4,8 @@
 	<title>June 30 | Reflection</title>
 	<meta name="description" content="A daily blog of my Developers Journey.  Evidence of my growth in both words and mastery of the page design" >
 	<meta name="author" content="Evan Genest">
-	<style>
+	<!-- oooooooooooooooooooooooooooooooooo -->
+	<style> 
 	body{
 		font-family: courier, monospace;
 	}
@@ -22,25 +23,32 @@
 		min-height: 400px;
 
 	}
+
+	.starboard {
+		font-family: sans-serif;
+	}
 	article{
 		background-color: black;
 		color: white;
 		min-height: 400px;
 	}
-	</style>
+	</style> <!-- oooooooooooooooooooooooooooooooooo -->
 </head>
 <body>
 	<header>
-	<h1>News:</h1>
-	<ol><li>Cut loose the codecademy; too redundant, triple the cost, goes half as far.  Not professional.  Really a great red carpet for a terrified newbie with nobody to hold their hand.</li><li>Confirmed that SWAP only sells 2010 Apples for $200 (with hdd)</li><li>Started incorporating Ducket, read during bus rides, into my page.</li><li>email from Coursera said: remember <em>Sunday deadline</em></li></ol>
+	<h1>To-Do today:</h1>
+	<ol><li>Cover ground -- do 3 weeks in 2 weeks.   Turn in project by Friday midnight?</li><li>Promised to meet comp sci Kristin Brown at school this morning.</li><li>Call Mom but just ten minutes.</li><li>Treat <em>Sun Prairie Library?</em></li></ol>
 	</header>
 
 	<article>
-	<h2>Made:</h2>
-	<p>Made a <a href="/home/atom_box/Dropbox/code/coursera_jhu/sandbox/L19_fun_box.html">messed up</a> box-example<img src="images/bry_thumb.png" alt="evan box example screenshot"></p>
+	<h2>Reflecting:</h2>
+	
+	<p class="starboard">Made a mess of the Assignment 2.   It was already sloppy.  And too creative.  And as the <i>coup de grace</i>, I labeled it with the wrong URL, something that I was <strong>explicitly</strong> told not to do in the instructions.</p>
+
+	<p class="starboard">Feel good that you nailed a life-experience investment, showing Meg we could co-plan quite a BC trip.   On the Fourth we hammered out the Vancouver Island camping base:  a muddy tidal flat for two days.  And decided the time-split of Island/Victoria/Vancouver.   And made the major decision: splurge $300(!) on two concluding nights, a four-and-a-half star hotel in <em>downtown</em> Vancouver, as good staging for both seeing and leaving.</p>
 	
 	<h2>Other:</h2>
-	<p>  Mom called wanting long debrief and later texted re "Amy's anger".  My next move might be to gently set one rule:  spend 50/50 time discussing both people's roles and use language about how each person feels.  Don't guess Amy's feeling, give observations.</p>
+	<p class="starboard">  Meg sent cold oatmeal jar with me, a whiff of her swishing around the house in an Indian-patterned nachtshirten. </p>
 	<h2>
 	</body>
 	</article>
