--- a/week3/module3_solution/index.html
+++ b/week3/module3_solution/index.html
@@ -8,7 +8,8 @@
     <title>Module 3 | Evan Genest Homework</title>
     <meta name="author" content="Evan Genest genest.1@osu.edu mistergenest@twitter">
     <meta name="description" content="An exercise for the Coursera class HTML, CSS, and JavaScript by Yaakov at Johns Hopkins University">
-
+    <!-- Optional Font-->
+    <link href="https://fonts.googleapis.com/css?family=Zilla+Slab" rel="stylesheet"> 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" type="text/css" rel="stylesheet">
     <link href="css/oolong.css" type="text/css" rel="stylesheet" >
@@ -23,25 +24,25 @@
   <!--++++++++++++++++++++++++-->
   <body>
     <header>
-    <nav id="header-nav" class="navbar navbar-default">
-    <div class="container">
-      <h1>Food, LLC</h1>
-      <ul>
-        <li>Chicken</li>
-        <li>Beef</li>
-        <li>Sushi</li>
-      </ul>
-    </div>
-    </nav>
+      <nav id="header-nav" class="navbar navbar-default">
+        <div class="container-fluid" id="overridehead">
+          <div class="navbar-header"
+           <h1 id="business_name">Food, LLC</h1>
+          </div>
+        </div>
+      </nav>
     </header>
-<div>
-  <div><h2>Chicken</h2><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,   quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo id est laborum.</p></div>
 
-  <div><h2>Beef</h2><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,   quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo id est laborum.</p></div>
+<section class="container">
 
-  <div><h2>Sushi</h2><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,   quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo id est laborum.</p></div>
 
-</div>
+  <article><h2>Chicken</h2><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,   quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo id est laborum.</p></article>
+
+  <article><h2>Beef</h2><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,   quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo id est laborum.</p></article>
+
+  <article><h2>Sushi</h2><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,   quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo id est laborum.</p></article>
+
+</section>
 
 
 <!--++++++++++++++++++++++++-->
