Type in some of Lect31 by hand but not enough to run.

--- a/week3/module3_solution/index.html
+++ b/week3/module3_solution/index.html
@@ -29,8 +29,38 @@
           <div class="navbar-header"
            <h1 id="business_name">Food, LLC</h1>
           </div>
-        </div>
+        </div>        
+      
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
       </nav>
+      <!-- TRY IT HERE FIRST, THEN MOVE UP-->
+      <button type="button"
+              class="navbar-toggle collapsed"
+              data-toggle="collapse"
+              data-target="#chow_buttons"
+              aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+
+      </button>
+      <!--++++++++++++++++++++++++-->
     </header>
 
 <section class="container">
