Widths okay -- ready to submit

--- a/week3/module3_solution/index.html
+++ b/week3/module3_solution/index.html
@@ -29,21 +29,21 @@
   <nav class="navbar navbar-default">
     <div class="container-fluid">
       <!-- Brand and toggle get grouped for better mobile display -->
-     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed " data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar" ></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a id="business_name" class="navbar-brand"  href="#">Food, LLC</a>
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed " data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar" ></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a id="business_name" class="navbar-brand"  href="#">Food, LLC</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav visible-xs">
-        <li class="one two"><a href="#">Chicken</a></li>
-        <li class="one two"><a href="http://www.example.com">Beef</a></li>
+        <li class="one two"><a href="#chi">Chicken</a></li>
+        <li class="one two"><a href="#bee">Beef</a></li>
         <li class="one two"><a href="#sus">Sushi</a></li>
         
       </ul>
@@ -54,27 +54,46 @@
 
 
 
-
-
-
-
-
-
-
+   
       <!--++++++++++++++++++++++++-->
     </header>
 
-<section class="container">
+<section class="container col-md-12 col-sm-12 col-xs-12">
 
+  <p class="text-center">Our Menu</p>
 
-  <article id="chi"><h2>Chicken</h2><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,   quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo id est laborum.</p>
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,   quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo id est laborum.</p></article>
+<!---
+<div class="row">
+  <div class="col-md-1">.col-md-1</div>
+-->
 
-  <article id="bee"><h2>Beef</h2><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,   quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo id est laborum.<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,   quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo id est laborum.</p></p></article>
+   <article id="bee"  class="row col-md-13 col-sm-13 col-xs-13"><h2 class="text-center">Chicken</h2><p>Huius fama bubulae pullum cibum esuriens facit. Credo pondus habere solet Coursera studiosorum parte secunda et tertia vice. Quinquaginta septem hebdomadae habebit quattuor unde omnis apte ad consilium pagina gymnasium.  Lorem ipsum indeed. </p>
+    </div>
+  </article>
 
-  <article id="sus"><h2>Sushi</h2><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,   quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo id est laborum.</p><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,   quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo id est laborum.</p></article>
+  <article id="bee"  class="row col-md-13 col-sm-13 col-xs-13"><h2 class="text-center">Beef</h2><p>Huius fama bubulae pullum cibum esuriens facit. Credo pondus habere solet Coursera studiosorum parte secunda et tertia vice. Quinquaginta septem hebdomadae habebit quattuor unde omnis apte ad consilium pagina gymnasium.  Lorem ipsum indeed. </p></p></article>
+
+  <article id="sus"  class="row col-md-13 col-sm-13 col-xs-13"><h2 class="text-center" >Sushi</h2><p>Huius fama bubulae pullum cibum esuriens facit. Credo pondus habere solet Coursera studiosorum parte secunda et tertia vice. Quinquaginta septem hebdomadae habebit quattuor unde omnis apte ad consilium pagina gymnasium.  Lorem ipsum indeed. </p></article>
 
 </section>
+<!--o+o+o+O+O+ -->
+   <!-- Example row of columns -->
+      <div class="row">
+        <div class="col-md-8">
+          <h2>Heading</h2>
+          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+        </div>
+        <div class="col-md-4">
+          <h2>Heading</h2>
+          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+       </div>
+        <div class="col-md-4">
+          <h2>Heading</h2>
+          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+        </div>
 
 
 <!--++++++++++++++++++++++++-->
