Three links on the dropdown click.

--- a/week3/module3_solution/index.html
+++ b/week3/module3_solution/index.html
@@ -67,7 +67,7 @@
   <div class="col-md-1">.col-md-1</div>
 -->
 
-   <article id="bee"  class="row col-md-13 col-sm-13 col-xs-13"><h2 class="text-center">Chicken</h2><p>Huius fama bubulae pullum cibum esuriens facit. Credo pondus habere solet Coursera studiosorum parte secunda et tertia vice. Quinquaginta septem hebdomadae habebit quattuor unde omnis apte ad consilium pagina gymnasium.  Lorem ipsum indeed. </p>
+   <article id="chi"  class="row col-md-13 col-sm-13 col-xs-13"><h2 class="text-center">Chicken</h2><p>Huius fama bubulae pullum cibum esuriens facit. Credo pondus habere solet Coursera studiosorum parte secunda et tertia vice. Quinquaginta septem hebdomadae habebit quattuor unde omnis apte ad consilium pagina gymnasium.  Lorem ipsum indeed. </p>
     </div>
   </article>
 
