--- a/week3/module3_solution/index.html
+++ b/week3/module3_solution/index.html
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Module 3 | Evan Genest Homework</title>
-    <meta name="author" content="Evan Genest genest.1@osu.edu mistergenest@twitter">
+    <meta name="author" content="
+    Evan Genest 
+    genest.1@osu.edu 
+    mistergenest@twitter.com">
     <meta name="description" content="An exercise for the Coursera class HTML, CSS, and JavaScript by Yaakov at Johns Hopkins University">
     <!-- Optional Font-->
     <link href="https://fonts.googleapis.com/css?family=Zilla+Slab" rel="stylesheet"> 
@@ -76,25 +79,6 @@
   <article id="sus"  class="row col-md-13 col-sm-13 col-xs-13"><h2 class="text-center" >Sushi</h2><p>Huius fama bubulae pullum cibum esuriens facit. Credo pondus habere solet Coursera studiosorum parte secunda et tertia vice. Quinquaginta septem hebdomadae habebit quattuor unde omnis apte ad consilium pagina gymnasium.  Lorem ipsum indeed. </p></article>
 
 </section>
-<!--o+o+o+O+O+ -->
-   <!-- Example row of columns -->
-      <div class="row">
-        <div class="col-md-8">
-          <h2>Heading</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-        </div>
-        <div class="col-md-4">
-          <h2>Heading</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-       </div>
-        <div class="col-md-4">
-          <h2>Heading</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-        </div>
-
 
 <!--++++++++++++++++++++++++-->
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
