--- a/week4/harder/index.html
+++ b/week4/harder/index.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <title>Module 4 Solution Starter</title>
+  <meta charset="utf-8"/>
+  <meta name="description" content="Solution to HW 4"/>
+  <meta name="author" content="Evan Genest twitter@mistergenest"/>
+  <title> 4th Solution |Homework for Coursera/Dr. Chainin</title>
   <script>
-    var names = []; // DO NOT REMOVE
+  var names = []; // DO NOT REMOVE
   </script>
   <script src="SpeakHello.js"></script>
   <script src="SpeakGoodBye.js"></script>
   <script src="script.js"></script>
 </head>
 <body>
-  <h1>Module 4 Solution Starter</h1>
+  <h1 style="font-family: arial; color: green; font-weight: bold; text-align: center"; >Module 4 Solution Finished!</h1>
+  <img src="courseraHand.png" alt="Disembodied Hand as Logo" width="158px" height="226px">
+
 </body>
 </html>
