Make main page load jumbotron + 3 tiles

--- a/week5/assignment5-solution-starter/snippets/home-snippet.html
+++ b/week5/assignment5-solution-starter/snippets/home-snippet.html
@@ -1,13 +1,18 @@
     <div class="jumbotron">
-      <img src="images/jumbotron_768.jpg" alt="Picture of restaurant" class="img-responsive visible-xs">
+      <img src="images/jumbotron_768.jpg" alt="Picture of restaurant" class="img-responsive visible-xs">  
+      </img>
     </div>
+
+    <!-- for h w  5 -->
+
 
     <div id="home-tiles" class="row">
       <div class="col-md-4 col-sm-6 col-xs-12">
         <a href="#" onclick="$dc.loadMenuCategories();"><div id="menu-tile"><span>menu</span></div></a>
       </div>
       <div class="col-md-4 col-sm-6 col-xs-12">
-        <a href="#" onclick="$dc.loadMenuItems({{randomCategoryShortName}});">
+        <a href="#" onclick="$dc.loadMenuItems({{randomCategoryShortName}});"> 
+          <!-- THEY CHANGED THE LINE ABOVE FOR THIS HOMEWORK -->
           <div id="specials-tile"><span>specials</span></div>
         </a>
       </div>
