--- a/week5/assignment5-solution-starter/snippets/home-snippet.html
+++ b/week5/assignment5-solution-starter/snippets/home-snippet.html
@@ -11,7 +11,11 @@
         <a href="#" onclick="$dc.loadMenuCategories();"><div id="menu-tile"><span>menu</span></div></a>
       </div>
       <div class="col-md-4 col-sm-6 col-xs-12">
+        <!--
         <a href="#" onclick="$dc.loadMenuItems({{randomCategoryShortName}});"> 
+        -->
+        <a href="#" onclick="$dc.loadMenuItems('CM');"> 
+
           <!-- THEY CHANGED THE LINE ABOVE FOR THIS HOMEWORK -->
           <div id="specials-tile"><span>specials</span></div>
         </a>
